V1.15.0 (#234)
* 215 - Add "ocrNumberOfPages" to OCR action

* #207 - GET /documents/{documentId}/content - NoSuchKeyException

* #217 - deepLinkPath property is using the deepest-level name as path and is not modifiable

* #218 - POST /search tag range not inclusive of "end" value

* #228 - add IDP Mapping

* #227 - Modify "Only available with Pro/Enterprise" text in /documents/{id}/ocr endpoints

* #226 - Add ability to publish document

* Updated console to 3.6.0

* #232 - Add Schema Classification

* #231 - Require valid URL on deepLinkPath property

* #195 - Users API