@@ -24,7 +24,10 @@
 package com.formkiq.stacks.api.awstest;
 
 import static com.formkiq.aws.dynamodb.SiteIdKeyGenerator.DEFAULT_SITE_ID;
+import static com.formkiq.aws.dynamodb.objects.Objects.notNull;
+import static com.formkiq.aws.services.lambda.ApiResponseStatus.SC_UNAUTHORIZED;
 import static com.formkiq.stacks.dynamodb.ConfigService.MAX_DOCUMENTS;
+import static com.formkiq.testutils.aws.FkqDocumentService.waitForActionsComplete;
 import static com.formkiq.testutils.aws.FkqDocumentService.waitForDocumentContent;
 import static com.formkiq.testutils.aws.FkqDocumentService.waitForDocumentTag;
 import static org.junit.jupiter.api.Assertions.assertEquals;
@@ -45,14 +48,20 @@ import java.net.http.HttpResponse.BodyHandlers;
 import java.nio.charset.StandardCharsets;
 import java.text.SimpleDateFormat;
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.Date;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.UUID;
 import java.util.concurrent.TimeUnit;
-import java.util.function.BiPredicate;
-import java.util.stream.Collectors;
+
+import com.formkiq.client.api.AttributesApi;
+import com.formkiq.client.invoker.ApiResponse;
+import com.formkiq.client.model.AddAction;
+import com.formkiq.client.model.DocumentActionType;
+import com.formkiq.client.model.GetAttributeResponse;
+import com.formkiq.stacks.dynamodb.attributes.AttributeKeyReserved;
 import org.junit.jupiter.api.AfterAll;
 import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.Test;
@@ -112,8 +121,6 @@ public class DocumentsRequestTest extends AbstractAwsIntegrationTest {
   private static final int STATUS_BAD_REQUEST = 400;
   /** 201 Created. */
   private static final int STATUS_CREATED = 201;
-  /** 403 Forbidden. */
-  private static final int STATUS_FORBIDDEN = 403;
   /** 404 Not Found. */
   private static final int STATUS_NOT_FOUND = 404;
   /** 200 OK. */
@@ -144,19 +151,19 @@ public class DocumentsRequestTest extends AbstractAwsIntegrationTest {
 
     configService = new FkqConfigService(getAwsprofile(), getAwsregion(), getAppenvironment());
 
-    addAndLoginCognito(READONLY_EMAIL, Arrays.asList("default_read"));
-    addAndLoginCognito(USER_EMAIL, Arrays.asList(DEFAULT_SITE_ID));
-    addAndLoginCognito(FINANCE_EMAIL, Arrays.asList(GROUP_FINANCE));
+    addAndLoginCognito(READONLY_EMAIL, List.of("default_read"));
+    addAndLoginCognito(USER_EMAIL, List.of(DEFAULT_SITE_ID));
+    addAndLoginCognito(FINANCE_EMAIL, List.of(GROUP_FINANCE));
   }
 
   /** {@link SimpleDateFormat}. */
-  private SimpleDateFormat df = new SimpleDateFormat("yyyy-MM-dd");
+  private final SimpleDateFormat df = new SimpleDateFormat("yyyy-MM-dd");
 
   /** {@link Gson}. */
-  private Gson gson = GsonUtil.getInstance();
+  private final Gson gson = GsonUtil.getInstance();
 
   /** {@link HttpClient}. */
-  private HttpClient http = HttpClient.newHttpClient();
+  private final HttpClient http = HttpClient.newHttpClient();
 
   /**
    * Fetch Document.
@@ -164,19 +171,15 @@ public class DocumentsRequestTest extends AbstractAwsIntegrationTest {
    * @param api {@link DocumentsApi}
    * @param documentId {@link String}
    * @return {@link GetDocumentResponse}
-   * @throws IOException IOException
    * @throws InterruptedException InterruptedException
-   * @throws URISyntaxException URISyntaxException
    */
   private GetDocumentResponse fetchDocument(final DocumentsApi api, final String documentId)
-      throws IOException, InterruptedException, URISyntaxException {
-
-    String siteId = null;
+      throws InterruptedException {
 
     while (true) {
 
       try {
-        return api.getDocument(documentId, siteId, null);
+        return api.getDocument(documentId, null, null);
       } catch (ApiException e) {
         Thread.sleep(ONE_SECOND);
       }
@@ -184,11 +187,10 @@ public class DocumentsRequestTest extends AbstractAwsIntegrationTest {
   }
 
   private AddDocumentRequest getChildDocumentRequest(final String content) {
-    AddDocumentRequest req = new AddDocumentRequest()
+    return new AddDocumentRequest()
         .addTagsItem(new AddDocumentTag().key("formName").value("Job Application Form"))
         .addDocumentsItem(new AddChildDocument().content(content).contentType("application/json")
             .addTagsItem(new AddDocumentTag().key("formData")));
-    return req;
   }
 
   /**
@@ -197,17 +199,16 @@ public class DocumentsRequestTest extends AbstractAwsIntegrationTest {
    * @throws Exception Exception
    */
   @Test
-  @Timeout(unit = TimeUnit.SECONDS, value = TEST_TIMEOUT)
+  @Timeout(value = TEST_TIMEOUT)
   public void testDelete01() throws Exception {
     for (ApiClient client : getApiClients(null)) {
       // given
-      String siteId = null;
       DocumentsApi api = new DocumentsApi(client);
       String documentId = UUID.randomUUID().toString();
 
       // when
       try {
-        api.deleteDocument(documentId, siteId, Boolean.FALSE);
+        api.deleteDocument(documentId, null, Boolean.FALSE);
         fail();
       } catch (ApiException e) {
         // then
@@ -222,7 +223,7 @@ public class DocumentsRequestTest extends AbstractAwsIntegrationTest {
    * @throws Exception Exception
    */
   @Test
-  @Timeout(unit = TimeUnit.SECONDS, value = TEST_TIMEOUT)
+  @Timeout(value = TEST_TIMEOUT)
   public void testGet01() throws Exception {
     for (ApiClient client : getApiClients(null)) {
       // given
@@ -244,7 +245,7 @@ public class DocumentsRequestTest extends AbstractAwsIntegrationTest {
    * @throws Exception Exception
    */
   @Test
-  @Timeout(unit = TimeUnit.SECONDS, value = TEST_TIMEOUT)
+  @Timeout(value = TEST_TIMEOUT)
   public void testGet02() throws Exception {
     // given
     final String siteId = "finance";
@@ -266,7 +267,7 @@ public class DocumentsRequestTest extends AbstractAwsIntegrationTest {
       fail();
     } catch (ApiException e) {
       // then
-      assertEquals(STATUS_FORBIDDEN, e.getCode());
+      assertEquals(SC_UNAUTHORIZED.getStatusCode(), e.getCode());
       assertEquals("{\"message\":\"fkq access denied to siteId (finance)\"}", e.getResponseBody());
     }
   }
@@ -277,7 +278,7 @@ public class DocumentsRequestTest extends AbstractAwsIntegrationTest {
    * @throws Exception Exception
    */
   @Test
-  @Timeout(unit = TimeUnit.SECONDS, value = TEST_TIMEOUT)
+  @Timeout(value = TEST_TIMEOUT)
   public void testGet03() throws Exception {
     // given
     String siteId = "finance";
@@ -298,7 +299,7 @@ public class DocumentsRequestTest extends AbstractAwsIntegrationTest {
     try {
       api.getDocuments(siteId, null, null, date, null, null, null, null);
     } catch (ApiException e) {
-      assertEquals(STATUS_FORBIDDEN, e.getCode());
+      assertEquals(SC_UNAUTHORIZED.getStatusCode(), e.getCode());
       assertEquals("{\"message\":\"fkq access denied to siteId (finance)\"}", e.getResponseBody());
     }
   }
@@ -309,7 +310,7 @@ public class DocumentsRequestTest extends AbstractAwsIntegrationTest {
    * @throws Exception Exception
    */
   @Test
-  @Timeout(unit = TimeUnit.SECONDS, value = TEST_TIMEOUT)
+  @Timeout(value = TEST_TIMEOUT)
   public void testGet04() throws Exception {
     // given
     final String siteId = "finance";
@@ -335,10 +336,9 @@ public class DocumentsRequestTest extends AbstractAwsIntegrationTest {
    * @throws Exception Exception
    */
   @Test
-  @Timeout(unit = TimeUnit.SECONDS, value = TEST_TIMEOUT)
+  @Timeout(value = TEST_TIMEOUT)
   public void testGet05() throws Exception {
     // given
-    final String siteId = GROUP_FINANCE;
     ApiClient client = getApiClientForUser(FINANCE_EMAIL, USER_PASSWORD);
     DocumentsApi api = new DocumentsApi(client);
 
@@ -348,7 +348,7 @@ public class DocumentsRequestTest extends AbstractAwsIntegrationTest {
     GetDocumentsResponse results0 =
         api.getDocuments(null, null, null, date, null, null, null, null);
     GetDocumentsResponse results1 =
-        api.getDocuments(siteId, null, null, date, null, null, null, null);
+        api.getDocuments(GROUP_FINANCE, null, null, date, null, null, null, null);
 
     // then
     assertNotNull(results0.getDocuments());
@@ -398,7 +398,7 @@ public class DocumentsRequestTest extends AbstractAwsIntegrationTest {
    * @throws Exception Exception
    */
   @Test
-  @Timeout(unit = TimeUnit.SECONDS, value = TEST_TIMEOUT)
+  @Timeout(value = TEST_TIMEOUT)
   public void testPatch01DefaultClient() throws Exception {
     for (ApiClient client : getApiClients(null)) {
       testPatch01(client, null);
@@ -411,7 +411,7 @@ public class DocumentsRequestTest extends AbstractAwsIntegrationTest {
    * @throws Exception Exception
    */
   @Test
-  @Timeout(unit = TimeUnit.SECONDS, value = TEST_TIMEOUT)
+  @Timeout(value = TEST_TIMEOUT)
   public void testPatch01SiteIdClient() throws Exception {
     for (ApiClient client : getApiClients(SITE_ID)) {
       testPatch01(client, SITE_ID);
@@ -420,24 +420,22 @@ public class DocumentsRequestTest extends AbstractAwsIntegrationTest {
 
   /**
    * Wait For Document Content.
-   * 
+   *
    * @param client {@link ApiClient}
-   * @param siteId {@link String}
    * @param documentId {@link String}
-   * @return {@link GetDocumentResponse}
    * @throws InterruptedException InterruptedException
    */
-  private GetDocumentResponse waitForDocumentLength(final ApiClient client, final String siteId,
-      final String documentId) throws InterruptedException {
+  private void waitForDocumentLength(final ApiClient client, final String documentId)
+      throws InterruptedException {
 
     DocumentsApi api = new DocumentsApi(client);
 
     while (true) {
 
       try {
-        GetDocumentResponse response = api.getDocument(documentId, siteId, null);
+        GetDocumentResponse response = api.getDocument(documentId, null, null);
         if (response.getContentLength() != null) {
-          return response;
+          return;
         }
 
       } catch (ApiException e) {
@@ -454,39 +452,39 @@ public class DocumentsRequestTest extends AbstractAwsIntegrationTest {
    * @throws Exception Exception
    */
   @Test
-  @Timeout(unit = TimeUnit.SECONDS, value = TEST_TIMEOUT)
+  @Timeout(value = TEST_TIMEOUT)
   public void testPost01() throws Exception {
     // given
-    String siteId = null;
-    for (ApiClient client : getApiClients(siteId)) {
+    for (ApiClient client : getApiClients(null)) {
       DocumentsApi api = new DocumentsApi(client);
       AddDocumentRequest addReq =
           new AddDocumentRequest().content("test data").contentType("text/plain");
 
       // when
-      AddDocumentResponse response = api.addDocument(addReq, siteId, null);
+      AddDocumentResponse response = api.addDocument(addReq, null, null);
 
       // then
       String documentId = response.getDocumentId();
-      waitForDocumentLength(client, siteId, documentId);
+      waitForDocumentLength(client, documentId);
 
-      GetDocumentResponse document = api.getDocument(documentId, siteId, null);
-      assertEquals("9", document.getContentLength().toString());
+      GetDocumentResponse document = api.getDocument(documentId, null, null);
+      assertEquals("9", java.util.Objects.requireNonNull(document.getContentLength()).toString());
 
       // given
       UpdateDocumentRequest updateReq =
           new UpdateDocumentRequest().content("dummy data").contentType("application/pdf");
 
       // when - patch document
-      api.updateDocument(documentId, updateReq, siteId, null);
+      api.updateDocument(documentId, updateReq, null, null);
 
       // then - check content type changed
       while (true) {
         // map = fetchDocument(client, documentId);
-        document = api.getDocument(documentId, siteId, null);
+        document = api.getDocument(documentId, null, null);
 
-        if (document.getContentType().equals("application/pdf")) {
-          assertNotEquals("9.0", document.getContentLength().toString());
+        if ("application/pdf".equals(document.getContentType())) {
+          assertNotEquals("9.0",
+              java.util.Objects.requireNonNull(document.getContentLength()).toString());
           break;
         }
 
@@ -500,12 +498,11 @@ public class DocumentsRequestTest extends AbstractAwsIntegrationTest {
   private void testPost01Delete(final ApiClient client, final String documentId)
       throws ApiException {
 
-    String siteId = null;
     DocumentsApi api = new DocumentsApi(client);
-    api.deleteDocument(documentId, siteId, Boolean.FALSE);
+    api.deleteDocument(documentId, null, Boolean.FALSE);
 
     try {
-      api.getDocument(documentId, siteId, null);
+      api.getDocument(documentId, null, null);
     } catch (ApiException e) {
       assertEquals(STATUS_NOT_FOUND, e.getCode());
     }
@@ -513,12 +510,11 @@ public class DocumentsRequestTest extends AbstractAwsIntegrationTest {
 
   /**
    * Save new File as Readonly user.
-   * 
-   * @throws Exception Exception
+   *
    */
   @Test
-  @Timeout(unit = TimeUnit.SECONDS, value = TEST_TIMEOUT)
-  public void testPost02() throws Exception {
+  @Timeout(value = TEST_TIMEOUT)
+  public void testPost02() {
     // given
     final String siteId = "finance";
     ApiClient client = getApiClientForUser(READONLY_EMAIL, USER_PASSWORD);
@@ -551,7 +547,7 @@ public class DocumentsRequestTest extends AbstractAwsIntegrationTest {
    * @throws Exception Exception
    */
   @Test
-  @Timeout(unit = TimeUnit.SECONDS, value = TEST_TIMEOUT)
+  @Timeout(value = TEST_TIMEOUT)
   public void testPost03() throws Exception {
     // given
     final String siteId = "finance";
@@ -572,7 +568,7 @@ public class DocumentsRequestTest extends AbstractAwsIntegrationTest {
       api.addDocument(req, siteId, null);
     } catch (ApiException e) {
       // then
-      assertEquals(STATUS_FORBIDDEN, e.getCode());
+      assertEquals(SC_UNAUTHORIZED.getStatusCode(), e.getCode());
       assertEquals("{\"message\":\"fkq access denied to siteId (finance)\"}", e.getResponseBody());
     }
   }
@@ -583,7 +579,7 @@ public class DocumentsRequestTest extends AbstractAwsIntegrationTest {
    * @throws Exception Exception
    */
   @Test
-  @Timeout(unit = TimeUnit.SECONDS, value = TEST_TIMEOUT)
+  @Timeout(value = TEST_TIMEOUT)
   public void testPost04() throws Exception {
     // given
     String siteId = "finance";
@@ -609,7 +605,7 @@ public class DocumentsRequestTest extends AbstractAwsIntegrationTest {
    * @throws Exception Exception
    */
   @Test
-  @Timeout(unit = TimeUnit.SECONDS, value = TEST_TIMEOUT)
+  @Timeout(value = TEST_TIMEOUT)
   public void testPost05() throws Exception {
     // given
     final String siteId = GROUP_FINANCE;
@@ -644,7 +640,7 @@ public class DocumentsRequestTest extends AbstractAwsIntegrationTest {
    * @throws Exception Exception
    */
   @Test
-  @Timeout(unit = TimeUnit.SECONDS, value = TEST_TIMEOUT)
+  @Timeout(value = TEST_TIMEOUT)
   public void testPost06() throws Exception {
     // given
     configService.save(SITEID1, new DynamicObject(Map.of(MAX_DOCUMENTS, "1")));
@@ -682,15 +678,13 @@ public class DocumentsRequestTest extends AbstractAwsIntegrationTest {
    * @throws Exception Exception
    */
   @Test
-  @Timeout(unit = TimeUnit.SECONDS, value = TEST_TIMEOUT)
+  @Timeout(value = TEST_TIMEOUT)
   public void testPost07() throws Exception {
 
     // given
-    String siteId = null;
-
     for (boolean enableEndpoint : Arrays.asList(Boolean.FALSE, Boolean.TRUE)) {
 
-      for (ApiClient client : getApiClients(siteId)) {
+      for (ApiClient client : getApiClients(null)) {
 
         DocumentsApi api = new DocumentsApi(client);
         PublicApi publicApi = new PublicApi(client);
@@ -700,14 +694,14 @@ public class DocumentsRequestTest extends AbstractAwsIntegrationTest {
         AddDocumentRequest req = getChildDocumentRequest(content);
 
         // when
-        AddDocumentResponse response = enableEndpoint ? publicApi.publicAddDocument(req, siteId)
-            : api.addDocument(req, siteId, null);
+        AddDocumentResponse response = enableEndpoint ? publicApi.publicAddDocument(req, null)
+            : api.addDocument(req, null, null);
 
         // then
         assertNotNull(response.getDocumentId());
         assertNotNull(response.getUploadUrl());
 
-        assertEquals(1, response.getDocuments().size());
+        assertEquals(1, notNull(response.getDocuments()).size());
         assertNotNull(response.getDocuments().get(0).getDocumentId());
         assertNull(response.getDocuments().get(0).getUploadUrl());
 
@@ -725,16 +719,17 @@ public class DocumentsRequestTest extends AbstractAwsIntegrationTest {
         // then
         String documentId = response.getDocumentId();
         assertEquals(STATUS_OK, httpresp.statusCode());
-        waitForDocumentTag(client, siteId, documentId, "formName");
+        waitForDocumentTag(client, null, documentId, "formName");
 
         // given
         DocumentTagsApi tagApi = new DocumentTagsApi(client);
 
         // when - fetch document
         GetDocumentTagsResponse tags =
-            tagApi.getDocumentTags(documentId, siteId, null, null, null, null);
+            tagApi.getDocumentTags(documentId, null, null, null, null, null);
 
         // then
+        assertNotNull(tags.getTags());
         assertEquals(1, tags.getTags().size());
         assertEquals("formName", tags.getTags().get(0).getKey());
         assertEquals("Job Application Form", tags.getTags().get(0).getValue());
@@ -742,12 +737,13 @@ public class DocumentsRequestTest extends AbstractAwsIntegrationTest {
         DocumentSearchApi searchApi = new DocumentSearchApi(client);
         DocumentSearchRequest searchReq = new DocumentSearchRequest()
             .query(new DocumentSearch().meta(new DocumentSearchMeta().path(documentId)));
-        DocumentSearchResponse s = searchApi.documentSearch(searchReq, siteId, null, null, null);
+        DocumentSearchResponse s = searchApi.documentSearch(searchReq, null, null, null, null);
 
-        assertEquals(1, s.getDocuments().size());
+        assertEquals(1, notNull(s.getDocuments()).size());
         assertEquals(documentId, s.getDocuments().get(0).getDocumentId());
 
-        GetDocumentResponse documentc = api.getDocument(documentId, siteId, null);
+        GetDocumentResponse documentc = api.getDocument(documentId, null, null);
+        assertNotNull(documentc.getDocuments());
         assertEquals(1, documentc.getDocuments().size());
         assertEquals(response.getDocuments().get(0).getDocumentId(),
             documentc.getDocuments().get(0).getDocumentId());
@@ -760,7 +756,7 @@ public class DocumentsRequestTest extends AbstractAwsIntegrationTest {
 
         // then
         assertNotNull(document);
-        assertNull(document.getDocuments());
+        assertTrue(notNull(document.getDocuments()).isEmpty());
         assertEquals(response.getDocumentId(), document.getBelongsToDocumentId());
       }
     }
@@ -772,21 +768,15 @@ public class DocumentsRequestTest extends AbstractAwsIntegrationTest {
    * @throws Exception Exception
    */
   @Test
-  @Timeout(unit = TimeUnit.SECONDS, value = TEST_TIMEOUT)
+  @Timeout(value = TEST_TIMEOUT)
   public void testPost08() throws Exception {
     // given
     ApiClient client = getApiClients(null).get(0);
     String url = client.getBasePath() + "/documents";
 
     Map<String, List<String>> headers =
-        Map.of("Authorization", Arrays.asList(getAdminToken().idToken()));
-    Optional<HttpHeaders> o =
-        Optional.of(HttpHeaders.of(headers, new BiPredicate<String, String>() {
-          @Override
-          public boolean test(final String t, final String u) {
-            return true;
-          }
-        }));
+        Map.of("Authorization", Collections.singletonList(getAdminToken().idToken()));
+    Optional<HttpHeaders> o = Optional.of(HttpHeaders.of(headers, (t, u) -> true));
 
     String content = "{\"path\": \"test.txt\",\"contentType\":\"text/plain\","
         + "\"content\":\"dGhpcyBpcyBhIHRlc3Q=\","
@@ -822,10 +812,9 @@ public class DocumentsRequestTest extends AbstractAwsIntegrationTest {
    * @throws Exception Exception
    */
   @Test
-  @Timeout(unit = TimeUnit.SECONDS, value = TEST_TIMEOUT)
+  @Timeout(value = TEST_TIMEOUT)
   public void testPost09() throws Exception {
     // given
-    String siteId = null;
     for (ApiClient client : getApiClients(null)) {
       DocumentsApi api = new DocumentsApi(client);
 
@@ -834,7 +823,7 @@ public class DocumentsRequestTest extends AbstractAwsIntegrationTest {
               .content("test data").addTagsItem(new AddDocumentTag().key("person").value("123"));
 
       // when
-      AddDocumentResponse response = api.addDocument(req, siteId, null);
+      AddDocumentResponse response = api.addDocument(req, null, null);
 
       // then
       assertNotNull(response.getDocumentId());
@@ -846,7 +835,7 @@ public class DocumentsRequestTest extends AbstractAwsIntegrationTest {
       while (true) {
         GetDocumentResponse map = fetchDocument(api, documentId);
         if (map.getContentType() != null) {
-          assertTrue(map.getContentType().toString().startsWith("text/plain"));
+          assertTrue(map.getContentType().startsWith("text/plain"));
           break;
         }
 
@@ -856,14 +845,14 @@ public class DocumentsRequestTest extends AbstractAwsIntegrationTest {
       Thread.sleep(ONE_SECOND * 2);
 
       // given
-      String newpath = "newpath_" + UUID.randomUUID().toString() + ".txt";
+      String newpath = "newpath_" + UUID.randomUUID() + ".txt";
 
       UpdateDocumentRequest updateDoc = new UpdateDocumentRequest().path(newpath)
           .addTagsItem(new AddDocumentTag().key("some").value("thing"))
           .addTagsItem(new AddDocumentTag().key("person").value("555"));
 
       // when - patch document
-      api.updateDocument(documentId, updateDoc, siteId, null);
+      api.updateDocument(documentId, updateDoc, null, null);
 
       // then - check path changed
       while (true) {
@@ -878,10 +867,10 @@ public class DocumentsRequestTest extends AbstractAwsIntegrationTest {
 
       DocumentTagsApi tagApi = new DocumentTagsApi(client);
       GetDocumentTagsResponse tags =
-          tagApi.getDocumentTags(documentId, siteId, null, null, null, null);
-      assertEquals("555", tags.getTags().stream().filter(t -> t.getKey().equals("person")).findAny()
-          .get().getValue());
-      assertEquals("thing", tags.getTags().stream().filter(t -> t.getKey().equals("some")).findAny()
+          tagApi.getDocumentTags(documentId, null, null, null, null, null);
+      assertEquals("555", java.util.Objects.requireNonNull(tags.getTags()).stream()
+          .filter(t -> java.util.Objects.equals(t.getKey(), "person")).findAny().get().getValue());
+      assertEquals("thing", tags.getTags().stream().filter(t -> "some".equals(t.getKey())).findAny()
           .get().getValue());
     }
   }
@@ -892,7 +881,7 @@ public class DocumentsRequestTest extends AbstractAwsIntegrationTest {
    * @throws Exception Exception
    */
   @Test
-  @Timeout(unit = TimeUnit.SECONDS, value = TEST_TIMEOUT)
+  @Timeout(value = TEST_TIMEOUT)
   public void testPost10() throws Exception {
     // given
     String content = "test data";
@@ -918,13 +907,54 @@ public class DocumentsRequestTest extends AbstractAwsIntegrationTest {
         // then
         GetDocumentResponse document = api.getDocument(documentId, siteId, null);
         assertNotNull(document);
+        assertNotNull(document.getMetadata());
         assertEquals(2, document.getMetadata().size());
         assertEquals("playerId", document.getMetadata().get(0).getKey());
-        assertEquals("11,22",
-            document.getMetadata().get(0).getValues().stream().collect(Collectors.joining(",")));
+        assertEquals("11,22", String.join(",",
+            java.util.Objects.requireNonNull(document.getMetadata().get(0).getValues())));
         assertEquals("person", document.getMetadata().get(1).getKey());
         assertEquals("category", document.getMetadata().get(1).getValue());
       }
+    }
+  }
+
+  /**
+   * Test Publish Document.
+   *
+   * @throws ApiException ApiException
+   */
+  @Test
+  void testPublishDocument() throws ApiException, InterruptedException {
+    // given
+    String content = "test data";
+    for (String siteId : Arrays.asList(null, UUID.randomUUID().toString())) {
+      ApiClient client = getApiClients(siteId).get(0);
+
+      DocumentsApi api = new DocumentsApi(client);
+      String path = UUID.randomUUID() + ".txt";
+
+      // when
+      AddDocumentRequest req = new AddDocumentRequest().contentType("text/plain").path(path)
+          .content(content).addActionsItem(new AddAction().type(DocumentActionType.PUBLISH));
+      String documentId = api.addDocument(req, siteId, null).getDocumentId();
+
+      // then
+      waitForDocumentContent(client, siteId, documentId, content);
+      waitForActionsComplete(client, siteId, documentId);
+
+      ApiResponse<Void> response = api.getPublishedDocumentContentWithHttpInfo(documentId, siteId);
+
+      String location = notNull(response.getHeaders()).get("content-disposition").get(0);
+      assertEquals("attachment; filename=\"" + path + "\"", location);
+
+      String contentType = notNull(response.getHeaders()).get("content-type").get(0);
+      assertEquals("text/plain", contentType);
+
+      // check attribute exists
+      AttributesApi attributesApi = new AttributesApi(client);
+      GetAttributeResponse attribute =
+          attributesApi.getAttribute(AttributeKeyReserved.PUBLICATION.getKey(), siteId);
+      assertNotNull(attribute);
     }
   }
 }
